# woolly

./: .gitignore  API-Endpoints-Analysis.md  Agents-Panel-Changes-Stage-1.md  Agents-Panel-Changes-Stage-2.md  Agents-Panel-Changes-Stage-3.md  BACKEND_API_README.md  Backend-Simplification-Plan.md  Backend-Streaming-Integration-Guide.md  Correction-Strategy.md  Fresh-Start-Prompt.md  Indexer-Documentation.md  Indexer-Updated-Documentation.md  MCP-Chat-Integration-Plan.md  Opinion.md  Prompt-vercel-python.md  README.md  Repository-Cleanup-Plan.md  alembic.ini  cypress.config.ts  docker-compose.dev.yml  docker-compose.yml  improved-nextjs-route.ts  jest.config.js  jest.setup.js  main.py  mcp_test_results.json  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test-api-endpoints.sh  test_conversation_flow.py  test_mcp_compatibility.py  test_mcp_implementation.py  test_pydantic_chat.py  test_streaming_poc.py
api/: BACKEND_API_README.md  docs_system_prompt.txt  index.py  mermaid_system_prompt.txt  requirements.txt  test_results_table.md
app/: Plan1.md  Plan2.md  Plan3.md  globals.css  layout.tsx
components/: chat-context.tsx  chat-layout.tsx  chat-list-context.tsx  chat-title-context.tsx  chat.tsx  code-block.tsx  code-context-container.tsx  collapsible-code-block.tsx  connection-status.tsx  edit-indicator.tsx  edit-message-input.tsx  error-boundary.tsx  file-list.tsx  file-tree.tsx  icons.tsx  indexing-progress-row.tsx  indexing-status-panel.tsx  markdown.tsx  message-group.tsx  message.tsx  model-selector.tsx  navbar.tsx  (+15 more)
(+163 files in other folders)
