[project]
name = "woolly"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi==0.115.11",
    "fastapi-cli>=0.0.8",
    "httpx==0.28.1",
    "jinja2>=3.1.6",
    "openai==1.65.4",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.10.6",
    "pydantic-ai==0.0.35",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.20",
    "requests==2.32.3",
    "sqlalchemy==2.0.29",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
    "watchfiles>=1.1.0",
    "websockets>=15.0.1",
]
