[project]
name = "woolly"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.9.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai>=0.8.0",
    "pytest-asyncio>=1.0.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
